--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "themes/plain"]
-	path = themes/plain
+	path = src/themes/plain
 	url = git@github.com:Zekromaster/HugoTheme-Plain
 	branch = main
