fix: Repository names are case-sensitive

--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -14,6 +14,6 @@ static_sites:
   output_dir: /mnt/projectRoot/build/hugo
 
   github:
-    repo: zekromaster/zekromaster.net
+    repo: Zekromaster/zekromaster.net
     branch: main
     deploy_on_push: true
