--- a/.do/deploy.template.yaml
+++ b/.do/deploy.template.yaml
@@ -9,6 +9,6 @@ spec:
     output_dir: /mnt/projectRoot/build/hugo
 
     github:
-      repo: zekromaster/zekromaster.net
+      repo: Zekromaster/zekromaster.net
       branch: main
       deploy_on_push: true
