fix: Fixed typo in config.toml ("/games" was spelt "/gamess")

--- a/src/hugo/config.toml
+++ b/src/hugo/config.toml
@@ -15,7 +15,7 @@ url = "/blog"
 
 [[params.headerLinks]]
 title = "Games I Completed"
-url = "/gamess"
+url = "/games"
 
 [[params.headerLinks]]
 title = "Github"
