--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "themes/plain"]
-	path = src/hugo/themes/plain
+	path = themes/plain
 	url = https://github.com/Zekromaster/HugoTheme-Plain
 	branch = main
