--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           ruby-version: 2.7
 
+      - name: Install Gems
+        run: gem install rouge
+
       - name: Setup Asciidoctor
         uses: reitzig/actions-asciidoctor@v2.0.0
         with:
