--- a/data/games.toml
+++ b/data/games.toml
@@ -11,6 +11,7 @@ data = [
   {name = "Crash Nitro Kart", console = "PS2", completion = "101%", proof = "cnk.png", startDate = "2021-02-11", endDate = "2021-02-24"},
   {name = "Crash Tag Team Racing", console = "GCN", completion = "100%", proof = "cttr.png", startDate = "2022-04-28", endDate = "2021-04-30"},
   {name = "Crash Team Racing", console = "PSX", completion = "101%", proof = "ctr.png", startDate = "2017-12-30", endDate = "2017-12-30"},
+  {name = "Crash Team Racing Nitro-Fueled", console = "NSW", completion = "101%", proof = "ctrnf.png", startDate = "2022-05-01", endDate = "2022-06-03"},
   {name = "Crash Twinsanity", console = "PS2", completion = "100%", proof = "ctw.png", startDate = "2017-12-11", endDate = "2017-12-24"},
   {name = "Disney•Pixar Cars", console = "PC", completion = "250 Trophies", proof = "cars.png", startDate = "2020-12-27", endDate = "2021-01-01"},
   {name = "Donald Duck: Quack Attack?!", console = "PSX", completion = "112%", proof = "ddgq.png", startDate = "2021-10-25", endDate = "2021-10-27"},
