ci: Exclude CNAME from delete

--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -50,4 +50,5 @@ jobs:
           REPO: self
           BRANCH: pages
           FOLDER: public
+          CLEAR_GLOBS_FILE: .pagesdelete
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
